--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                         </p>
                     </div>
                     <div>
-                        <button class="contact-bt" id="contact-button"
-                            style="color: aliceblue; text-transform: uppercase; border: none;">Contact US</button>
+                        <button class="contact-bt" id="contact-button">Contact US</button>
                     </div>
                 </div>
                 <div class="col-md-6 hero-right" style="">
@@ -50,15 +49,27 @@
         <div id="modal" class="modal">
             <h2>Talk to us</h2>
             <div class="form-group">
-                <input type="text" id="fname" name="fname" placeholder="First Name">
-                <input type="text" id="lname" name="lname" placeholder="Last Name">
+                <label for="femail">Work email</label>
+                <input type="email" id="femail" name="femail" class="modal-email">
             </div>
-            <div class="form-group">
-                <input type="checkbox" id="agree" name="agree">
-                <label for="agree">I agree to Fyle's terms and conditions, and provide consent to send me
-                    communication.</label>
+            <div class="form-group" style="flex-direction: row; gap: 12px;">
+                <div class="form-group">
+                    <label for="fname">First name</label>
+                    <input type="text" id="fname" name="fname">
+                </div>
+                <div class="form-group">
+                    <label for="lname">Last name</label>
+                    <input type="text" id="lname" name="lname">
+                </div>
             </div>
-            <button id="submit-contact">Contact</button>
+            <div class="form-group" style="flex-direction: row;">
+                <div>
+                    <input type="checkbox" id="agree" name="agree">
+                </div>
+                <div for="agree" class="agree">I agree to Fyle's terms and conditions, and provide consent to send me
+                    communication.</div>
+            </div>
+            <button id="submit-contact" style="width: 100%;" class="contact-bt">Contact</button>
         </div>
     </div>
 
