--- a/index.html
+++ b/index.html
@@ -107,14 +107,10 @@
                             <img src="./images/icon.svg" alt="">
                         </div>
                         <div style="text-transform: uppercase;">
-                            <h3>
-                                WEB DEVELOPMENT
-                            </h3>
+                            <h3>WEB DEVELOPMENT</h3>
                         </div>
                         <div>
-                            <p>
-                                Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque
-                            </p>
+                            <p>Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque</p>
                         </div>
                         <div class="row justify-content-center align-items-center">
                             <a class="read-more-bt" style="text-decoration: none;" href="https://www.fylehq.com/"
@@ -124,7 +120,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="services-card" style="background: url('./images/3-2.png');"></div>
             </div>
 
@@ -189,21 +184,21 @@
         </div>
 
         <div class="s4-below-head container d-flex align-items-center justify-content-center">
-            <img src="./images/image.png" alt="Image">
+            <img id="main-image" src="./images/image.png" alt="Image">
             <div class="s4-card d-flex flex-column">
-                <div class="s4-card-section">
+                <div class="s4-card-section" id="section-1">
                     <div class="card-text-bold">Genderless Kei – Japan’s Hot</div>
                     <div class="card-text-normal">
                         Set to launch on the manufacturer’s new A330neo aircraft in 2017, it’s offering lots of
                     </div>
                 </div>
-                <div class="s4-card-section" style="background-color: #FF3147; color: white;">
+                <div class="s4-card-section" id="section-2" style="background-color: #FF3147; color: white;">
                     <div class="card-text-bold">Better Strategy & Quality</div>
                     <div class="card-text-normal">
                         Set to launch on the manufacturer’s new A330neo aircraft in 2017, it’s offering lots of
                     </div>
                 </div>
-                <div class="s4-card-section">
+                <div class="s4-card-section" id="section-3">
                     <div class="card-text-bold">Genderless Kei – Japan’s Hot</div>
                     <div class="card-text-normal">
                         Set to launch on the manufacturer’s new A330neo aircraft in 2017, it’s offering lots of
